src/tags/app-code-block/app-code-block.style.scss
.code-block {
  position: relative;

  .concise {
    display: none;
  }
}

.concise-mode .code-block {
  .html {
    display: none;
  }
  .concise {
    display: block;
  }
}

.filename {
  color: var(--section-color);
  font-family:
    "Ubuntu Mono",
    monaco,
    Consolas,
    Lucida Console,
    monospace;

  & ~ * pre {
    margin-top: 0.5rem;
  }
}

.code-block pre {
  max-width: fit-content;
}

@media (prefers-color-scheme: dark) {
  .shiki,
  .shiki span {
    color: var(--shiki-dark) !important;
    background-color: transparent !important;
  }
}

